--- a/guideNew.html
+++ b/guideNew.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
   <head>
-    <link href="style.css" rel="stylesheet">
+    <link href="style.css" rel="stylesheet"/>
     <meta charset="utf-8" />
     <title>
     ¡Bienvenid@ a D&P!
@@ -9,20 +9,20 @@
   </head>
   <body>
     <header>
-      <h4 id="relaunch">¡Relanzamiento! Todos nuestros productos con un 20% de descuento por tiempo limitado</h4>
-        <nav>
-          <div class="eyes">
-            <a href="https://dadosypinceles.com"><img class="logoMain" src="./media/logoClear.png"></a>
-            <a class="menu">Calabozos &amp Dragones</a>
-            <a class="menu">Sci-Fi</a>
-            <a class="menu">Personajes</a>
-            <a class="menu">Animales</a>
-            <a class="menu">Kits de Regalo</a>
-            <a class="menu">Quiénes somos</a>
-          </div>
-      </nav>     
-      <h4 class="attention">Envíos gratuitos a toda Colombia por compras superiores a $150.000</h4><br>
-    </header>
+      <h4 class="relaunch">¡Relanzamiento! Todos nuestros productos con un 20% de descuento por tiempo limitado</h4>
+        <nav> <!-- COLOCAR UN BUSCADOR POR PALABRAS Y UN BOTÓN DE HÉROE/VILLANO/CRIATURA/PERSONAJE ALEATORIO-->
+          <menu>
+              <li><a href="https://dadosypinceles.com"><img class="logoMain" src="./media/logoClear.png"/></a></li>
+              <li><a class="menu">Calabozos &amp Dragones</a></li>
+              <li><a class="menu">Sci-Fi</a></li>
+              <li><a class="menu">Personajes</a></li>
+              <li><a class="menu">Animales</a></li>
+              <li><a class="menu">Kits de Regalo</a></li>
+              <li><a class="menu">Quiénes somos</a></li>
+          </menu>
+        </nav>     
+      <h4 class="attention">Envíos gratuitos a toda Colombia por compras superiores a $150.000</h4><br/>
+      </header>
     <main>
       <section id="guideNew">
         <article>
