--- a/faq.html
+++ b/faq.html
@@ -24,7 +24,7 @@
       <h4 class="attention">Envíos gratuitos a toda Colombia por compras superiores a $150.000</h4><br/>
       </header>
     <main>
-      <section id="faq">
+      <section class="faq">
         <table>
          <thead>
            <tr><th><h2>PREGUNTA</h2></th><th><h2>RESPUESTA</h2></th></tr>
