--- a/guideNew.html
+++ b/guideNew.html
@@ -24,7 +24,7 @@
       <h4 class="attention">Envíos gratuitos a toda Colombia por compras superiores a $150.000</h4><br/>
       </header>
     <main>
-      <section id="guideNew">
+      <section class="guideNew">
         <article>
           <h1>Guía de bienvenida de Dados &amp Pinceles</h1>
           <p>Nos complace que estés aquí, a continuación te compartimos información importante para que navegues mejor en nuestro sitio web y encuentres lo que estás buscando  - o lo que no sabías que buscabas -.</p>
