--- a/index.html
+++ b/index.html
@@ -24,19 +24,20 @@
       <h4 class="attention">Envíos gratuitos a toda Colombia por compras superiores a $150.000</h4><br/>
       </header>
     <main>
-      <div class="intro"><h1>¡Bienvenid@ a nuestro taller de maravillas!</h1>
-        <p>En nuestra página encontrarás las más originales miniaturas para juegos, modelos de personajes famosos para darle estilo a tus espacios, e incluso kits de pintura para dar rienda suelta a tu creatividad.</p>
-      </div>
-    
-      <section id="newProducts">
-        <h2>Productos Nuevos</h2>
-        <video src="./media/catbusCrop.mp4" controls alt="Video musical que ilustra una figura impresa en 3D del famoso Gatobús de mi vecino Totoro.">Video no compatible</video>
-        <!--Aquí irá un carrusel con productos nuevos-->
+      <section class="intro">
+        <h1>¡Bienvenid@ a nuestro taller de maravillas!</h1>
+        <p style= "font-size: 24px;">En nuestra página encontrarás las más originales miniaturas para juegos, modelos de personajes famosos para darle estilo a tus espacios, e incluso kits de pintura para dar rienda suelta a tu creatividad.</p>
       </section>
+    
+      <!--<section id="newProducts">
+        <h2>Productos Nuevos</h2>
+        <video src="./media/catbusCrop.mp4" controls alt="Video musical que ilustra una figura impresa en 3D del famoso Gatobús de mi vecino Totoro.">Video no compatible</video>-->
+        <!--Aquí irá un carrusel con productos nuevos
+      </section><br/>-->
       <section>
-        <a class="basicInfo" href="guideNew.html"><img src="./media/guideNew.png" width="300" height="300"  alt="Botón que lleva a la guía de bienvenida."/><h3>¿Primera vez en nuestra web?</h3><p>Te invitamos a leer nuestra guía de bienvenida.</p></a>
-        <a class="basicInfo" href="faq.html"><img src="./media/faq.png" width="300" height="300" alt="Botón que lleva a preguntas frecuentes sobre proceso de compra."/><h3>Preguntas Frecuentes</h3><p>Si ya conoces nuestro sitio web, aquí encontrarás respuesta a dudas asociadas al proceso de compra.</p></a>
-        <a class="basicInfo"><img src="./media/payment.png" width="300" height="300" alt="Medios de pago: Efectivo, transferencia o tarjeta de crédito."/><h3>Medios de pago</h3><p>Puedes pagar en efectivo, transferencia o incluso tarjeta de crédito.</p></a>
+        <a class="basicInfo" href="guideNew.html"><img src="./media/guideNew.png" width="240" height="240"  alt="Botón que lleva a la guía de bienvenida."/><h3>¿Primera vez en nuestra web?</h3><p>Te invitamos a leer nuestra guía de bienvenida.</p></a>
+        <a class="basicInfo" href="faq.html"><img src="./media/faq.png" width="240" height="240" alt="Botón que lleva a preguntas frecuentes sobre proceso de compra."/><h3>Preguntas Frecuentes</h3><p>Si ya conoces nuestro sitio web, aquí encontrarás respuesta a dudas asociadas al proceso de compra.</p></a>
+        <a class="basicInfo"><img src="./media/payment.png" width="240ssssssss" height="240" alt="Medios de pago: Efectivo, transferencia o tarjeta de crédito."/><h3>Medios de pago</h3><p>Puedes pagar en efectivo, transferencia o incluso tarjeta de crédito.</p></a>
       </section>
     </main>
     <footer>
